--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -3,6 +3,6 @@
   <h2 class="font-text italic text-xs drop-shadow-lg">by James Miller</h2>
   <p class="font-text font-bold p-8 drop-shadow-lg">
     The valley is evergrowing. Click the cactus below to generate one of my
-    favorites here.
+    favorites here:
   </p>
 </div>
