--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,13 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import Title from "../components/Title.astro";
+import Location from "../components/Location.astro";
 ---
 
 <Layout>
   <main>
     <Title />
+    <Location />
   </main>
 </Layout>
 
