--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,10 @@ import "@fontsource/anaheim";
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>The Valley</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body class="bg-gradient-to-r from-orange-400 to-red-600">
     <slot />
