--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Location from "../components/Location.astro";
 <Layout>
   <main>
     <Title />
-    <Location client:load />
+    <Location />
   </main>
 </Layout>
 
