moved links file into components

--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -7,8 +7,9 @@
   <button id="refreshButton" class="hidden border border-red-50">refresh</button
   >
 </div>
+
 <script>
-  import linkList from "../../public/links";
+  import linkList from "./links.js";
 
   function getLink() {
     var random = Math.floor(Math.random() * linkList.length);
