--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -1,6 +1,7 @@
 ---
 ---
 
+<!-- Layouts -->
 <div class="text-center text-white">
   <button id="generateButton">cactus</button>
   <p id="link" class="hidden font-text drop-shadow-lg"></p>
