--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,3 +1,4 @@
+<!-- Title -->
 <div class="text-center pt-5 text-white">
   <h1 class="font-title text-2xl drop-shadow-lg p-5">What To Do In Phoenix</h1>
   <h2 class="font-text italic text-xs drop-shadow-lg">by James Miller</h2>
