Updated refresh button

--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -4,8 +4,11 @@
 <!-- Layouts -->
 <div class="text-center text-white">
   <button id="generateButton">cactus</button>
-  <p id="link" class="hidden font-text drop-shadow-lg"></p>
-  <button id="refreshButton" class="hidden border border-red-50">refresh</button
+  <p id="link" class="hidden font-text drop-shadow-lg p-4"></p>
+  <button
+    id="refreshButton"
+    class="hidden font-text border-4 rounded-md border-double border-l-white shadow-lg px-4"
+    >refresh</button
   >
 </div>
 
