--- a/src/components/Location.astro
+++ b/src/components/Location.astro
@@ -3,7 +3,20 @@
 
 <!-- Layouts -->
 <div class="text-center text-white">
-  <button id="generateButton">cactus</button>
+  <button id="generateButton">
+    <div class="-translate-x-9 drop-shadow-lg">
+      <pre>
+     _  _
+       | || | _
+       -| || || |
+         | || || |-
+         \_  || |
+           |  _/
+         -| | 
+              |_|-    
+      </pre>
+    </div>
+  </button>
   <p id="link" class="hidden font-text drop-shadow-lg p-4"></p>
   <button
     id="refreshButton"
