--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 import Title from "../components/Title.astro";
 import Location from "../components/Location.astro";
+import Footer from "../components/footer.astro";
 ---
 
 <Layout>
   <main>
     <Title />
     <Location />
+    <Footer />
   </main>
 </Layout>
 
