--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -3,7 +3,7 @@
   <h1 class="font-title text-2xl drop-shadow-lg p-5">What To Do In Phoenix</h1>
   <h2 class="font-text italic text-xs drop-shadow-lg">by James Miller</h2>
   <p class="font-text font-bold pt-7 px-7 pb-5 drop-shadow-lg">
-    The valley is growing. Click the cactus below to generate one of my
-    favorites here:
+    When in the valley you must eat. Click the cactus below to generate one of
+    my favorites here:
   </p>
 </div>
