--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,8 +1,10 @@
 <!-- Title -->
 <div class="text-center pt-5 text-white">
-  <h1 class="font-title text-2xl drop-shadow-lg p-5">What To Do In Phoenix</h1>
+  <h1 class="font-title text-2xl drop-shadow-lg pt-5 pb-4 px-5">
+    What To Do In Phoenix
+  </h1>
   <h2 class="font-text italic text-xs drop-shadow-lg">by James Miller</h2>
-  <p class="font-text font-bold pt-5 px-7 pb-4 drop-shadow-lg">
+  <p class="font-text font-bold pt-4 px-7 pb-3 drop-shadow-lg">
     When in the valley you must eat. Click the cactus below to generate one of
     my favorites here:
   </p>
