--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,11 +1,11 @@
 <!-- Title -->
-<div class="text-center pt-5 text-white">
+<div class="text-center pt-5 text-white animate-fadein">
   <h1 class="font-title text-2xl drop-shadow-lg pt-5 pb-4 px-5">
     What To Do In Phoenix
   </h1>
   <h2 class="font-text italic text-xs drop-shadow-lg">by James Miller</h2>
   <p class="font-text font-bold pt-4 px-7 pb-3 drop-shadow-lg">
-    When in the valley you must eat. Click the cactus below to generate one of
-    my favorites here:
+    The valley is filled with amazing food. Click the cactus below to generate
+    one of my favorites:
   </p>
 </div>
