--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -3,7 +3,7 @@
 
 <!-- Footer -->
 <footer
-  class="font-text text-white fixed bottom-0 left-0 w-full text-center p-2"
+  class="font-text text-white fixed bottom-0 left-0 w-full text-center p-2 animate-fadein"
 >
   <div>-------</div>
   <a href="http://jamesmiller.dev">jamesmiller.dev</a>
